--- a/skin/def/kona3.css
+++ b/skin/def/kona3.css
@@ -64,18 +64,20 @@ body {
 }
 
 #wikibody {
-  width: 690px; //730-40
+  width: 690px; /* 730-40 */
   font-size   : 1em;
   line-height : 1.4em;
   padding: 20px;
+  float:left;
 }
 
 #wikimenu {
-    top: 0px;
-    left: 730px;
-    width: 230px;
+    width: 210px; /* 960 - 730 - 20 */
     height: 100%;
+    padding: 10px;
     float: right;
+    top: 0px;
+    border-left: dashed 1px #e0e0ff;
 }
 
 #wikinavi { /* LEFT side menu */
