--- a/skin/def/kona3.css
+++ b/skin/def/kona3.css
@@ -1284,5 +1284,6 @@ span.konawiki3copyright a {
     #wikifooter a { font-size: 20px; }
     #loginform { font-size: 28px; }
     #loginform input { font-size: 28px; }
+    #wikimenu { font-size:24px; line-height: 35px; background-color: #f0f0ff; border-right: 9px solid #9090ff; }
 }
 
