--- a/skin/def/kona3.css
+++ b/skin/def/kona3.css
@@ -1287,3 +1287,14 @@ span.konawiki3copyright a {
     #wikimenu { font-size:24px; line-height: 35px; background-color: #f0f0ff; border-right: 9px solid #9090ff; }
 }
 
+@media screen and (max-width: 320px) {
+  #wikiheader { width: 320px; }
+  #wikifooter { width: 320px; }
+  #wikiframe  { width: 320px; }
+  #wikibody   { width: 320px; font-size:24px; line-height:35px; }
+  #wikiedit   { width: 320px; }
+  #wikimessage { width: 320px; }
+  #wikieditor { width: 320px; }
+  textarea#edit_txt { width: 300px; height: 180px; 
+    font-size: 20px; line-height: 20px; }
+}
