--- a/skin/def/kona3.css
+++ b/skin/def/kona3.css
@@ -549,18 +549,25 @@ body {
 }
 #wikibody table td {
 	background-color: #eeeeff;
-	padding: 4px 8px;
+	padding: 6px 8px;
 	color: #333333;
 	border-right: 1px solid #A0A0A0;
 	border-bottom: 1px solid #A0A0A0;
 	border-collapse: collapse;
+}
+#wikibody table td p {
+  padding: 0px; margin: 0px;
+}
+#wikibody table th p {
+  padding: 0px; margin: 0px;
 }
 #wikibody table {
 	border-collapse: collapse;
 	border-left: 1px solid #A0A0A0;
 	border-top: 1px solid #A0A0A0;
 }
-#wikibody table table tr {} #wikibody table table th {
+#wikibody table table tr {} 
+#wikibody table table th {
 	background-color: lavender;
 	border: 0;
 	padding: 4px 8px 4px 0;
