--- a/kona3engine/resource/edit.css
+++ b/kona3engine/resource/edit.css
@@ -88,6 +88,15 @@
   width: 100px;
 }
 
+#wikiedit #edit_counter {
+  background-color: #f0f0ff;
+  border: 1px dashed #ffc0c0;
+  margin-top: 8px;
+  padding:0.5%;
+  font-size: 0.8em;
+  width: 99%;
+}
+
 #wikiedit #edit_info {
   background-color: #f0f0ff;
   border: 1px dashed #ffc0c0;
