一時保存機能追加

--- a/kona3engine/resource/edit.css
+++ b/kona3engine/resource/edit.css
@@ -35,7 +35,7 @@
   height: 300px;
 }
 
-#wikiedit input#save_ajax_btn {
+#wikiedit input#temporarily_save_btn {
   font-size: 12px;
   border: 1px solid gray;
   color: black;
