--- a/skin/def/kona3.css
+++ b/skin/def/kona3.css
@@ -66,7 +66,6 @@ body {
 	margin: 0 auto;
 	font-size: 1em;
 	line-height: 1.4em;
-	padding: 20px;
 }
 #wikimenu {
 	height: 100%;
@@ -79,11 +78,14 @@ body {
 	margin: 0;
 }
 #wikimessage {
-	width: 950px;
-	/* 960 - 40 */
-	
+	max-width: 760;
+	margin: 0 auto;
 	text-align: left;
-	padding: 20px;
+}
+#wikimessage .box {
+	background-color: #f0f0ff;
+	padding: 1.5em;
+	margin: 1em;
 }
 /* for footer */
 
@@ -461,7 +463,7 @@ body {
 #wikibody h2 {
 	font-size: 20px;
 	font-weight: bold;
-	margin: 50px 0 20px 0;
+	margin: 20px 0 20px 0;
 	padding: 10px 10px 10px 4px;
 	border-top: solid 3px #e0e0e0;
 	color: #000044;
@@ -1133,12 +1135,7 @@ span.konawiki3copyright a {
 	border-left: 10px solid #C0C0FF;
 }
 #loginform input {
-	font-size: 16px;
-}
-#loginform input[type=submit] {
-	border: 1px solid #9090FF;
-	background-color: #F0F0F0;
-	padding: 12px;
+	font-size: 1em;
 }
 #kona3_show_data_dir {
   text-align: right;
