--- a/kona3engine/resource/edit.css
+++ b/kona3engine/resource/edit.css
@@ -1,30 +1,11 @@
 /* css */
 
-#wikiframe {
-  margin:0;
-  padding:0;
-  width:100%;
-}
-#wikiheader {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-#wikifooter {
-  margin:0; padding:0;
-  width:100%;
-}
-
-#wikimessage {
-  width: 100%;
-  margin:0;
-  padding:0;
-}
 
 #wikiedit {
   padding:8px;
-  margin:0px;
+  margin: 0 auto;
   background-color: #f0f0ff;
+  max-width:700px;
 }
 
 #wikiedit textarea {
