フッタのファイルパスが表示されなくなっていた問題を修正

--- a/kona3engine/template/parts_footer.html
+++ b/kona3engine/template/parts_footer.html
@@ -11,7 +11,7 @@
   {{ if ($show_data_dir != '') }}
   <div id="kona3_show_data_dir">
     <input id="show_data_dir" type="text" 
-     value="{{$show_data_dir}}" readonly>
+     value="{{$data_filename}}" readonly>
   </div>
   {{ endif }}
 
