--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -1,19 +1,5 @@
 {{ include parts_header.html }}
 
-{{ e:/*}}
-// body
-$m_save_temp = lang('Save temp');
-$m_save = lang('Save &amp; Show');
-$m_git_save = lang('Save to Repo');
-$m_ls_load = lang('Load from Browser');
-
-// git button
-$git_button = '';
-if ($kona3conf['git.enabled']) {
-  $git_button =<<<__EOS
-__EOS;
-}
-{{ e:*/ }}
 <!-- editor -->
 <div id="wikimessage">
   <div id="wikiedit">
@@ -23,7 +9,7 @@ __EOS;
       <input type="hidden" name="a_mode" value="trywrite">
       <input type="hidden" id="a_hash" name="a_hash" value="{{$a_hash}}">
       <div class="editor">
-        <textarea id="edit_txt" name="edit_txt">{{$page_body}}</textarea>
+        <textarea id="edit_txt" name="edit_txt">{{$edit_txt}}</textarea>
       </div>
       <div class="buttons">
         <input id="temporarily_save_btn"
