ログインフォームをテンプレートを使うように修正。

--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -40,8 +40,10 @@
     <div class="desc">
       <div>etc...</div>
       <ul>
-        <li><input id="ls_load_btn" type="button" class="pure-button"
-             value="$m_ls_load"></li>
+        <li>
+          <input id="ls_load_btn" type="button" class="pure-button"
+            value="{{'Load temp'| lang}}">
+        </li>
       </ul>
     </div>
   </div>
