--- a/kona3engine/template/edit.html
+++ b/kona3engine/template/edit.html
@@ -18,10 +18,11 @@
         <input id="save_btn" 
           class="pure-button button-short"
           type="submit" value="{{'Save &amp; Show'|lang}}">
-        {{if $git_enabled}}
-        <input id="git_save_btn" class="pure-button button-short" 
-          type="button" value="{{'Save to Repo'|lang}}">
-        {{endif}}
+        {{ if $git_enabled }}
+        <input id="git_save_btn" type="button"
+          class="pure-button button-short" 
+          value="{{'Save to Repo'|lang}}">
+        {{ endif }}
       </div>
       <div>
         <input type="text" id="edit_info" class="info" readonly>
