メールログを削除する機能を追加

--- a/kona3engine/template/emailLogs.html
+++ b/kona3engine/template/emailLogs.html
@@ -10,6 +10,11 @@
 </div>
 {{ endfor }}
 
+<div class="box_border">
+  <a class="pure-button" href="{{$delete_link}}">
+    Delete All</a>
+</div>
+
 </div></div><!-- end of #wikimessage -->
 <div style="clear:both;"></div>
 
