最新更新のページを表示できるように #14 #20

--- a/kona3engine/template/user.html
+++ b/kona3engine/template/user.html
@@ -4,7 +4,7 @@
 
 {{if kona3isAdmin() }}
 <div class="box_border">
-  <h3>{{'Admin' | lang}}</h3>
+  <h3>{{'Admin Menu' | lang}}</h3>
   <div style="padding:8px;">
     <a class="pure-button" href="{{$userList_link}}">
     {{'Users List'|lang}}</a>
