--- a/skin/def/kona3.css
+++ b/skin/def/kona3.css
@@ -1,27 +1,3 @@
-#allpage_footer
-{
-	font-size:0.8em;
-	text-align:left;
-}
-
-#backuplist
-{
-	font-size:0.8em;
-	margin:8px;
-}
-
-#backuplist .new
-{
-	color:red;
-}
-
-#backuplist ul
-{
-	list-style-type:none;
-	margin-left:8px;
-	padding-left:8px;
-}
-
 #conflict_copy_edit_btn
 {
 	width:300px;
@@ -43,41 +19,10 @@
 	width:50%;
 }
 
-#loginform
-{
-	background-color:#f0f0ff;
-	border-left:10px solid #C0C0FF;
-	margin:8px;
-	padding:20px;
-}
-
-#loginform input
-{
-	font-size:1em;
-}
-
-#navivar
-{
-	text-align:center;
-	width:100%;
-}
-
 #pagename
 {
 	font-size:0.8em;
 	font-weight:400;
-}
-
-#uptime_div
-{
-	padding:4px;
-}
-
-#wikiattach
-{
-	border-top:solid 3px #a0a0a0;
-	font-size:10px;
-	padding:16px;
 }
 
 #wikibody
@@ -86,21 +31,6 @@
 	line-height:1.4em;
 	margin:0 auto;
 	max-width:768px;
-}
-
-#wikibody .blognavi2
-{
-	background-color:#fff090;
-	color:#803333;
-	font-size:18px;
-	font-weight:700;
-	margin:0;
-	padding:4px;
-}
-
-#wikibody .bodypad
-{
-	padding:0 16px 8px;
 }
 
 #wikibody .buttons .hint,
@@ -131,124 +61,11 @@
 	text-align:center;
 }
 
-#wikibody .contents .navi
-{
-	background-color:#FFFFC9;
-	color:#fc7819;
-	font-size:12px;
-	margin-bottom:24px;
-	text-align:center;
-}
-
-#wikibody .contents .navi a,
-#wikibody .contents .blognavi a
-{
-	color:#fc7819;
-	text-decoration:none;
-}
 
 #wikibody .date
 {
 	color:#333;
 	font-size:0.7em;
-}
-
-#wikibody .editor
-{
-	background-color:#FFF;
-}
-
-#wikibody .entry
-{
-	border-bottom:solid 1px #e0e0e0;
-	border-left:solid 1px #e0e0e0;
-	border-right:solid 1px #e0e0e0;
-	border-top:solid 1px #e0e0e0;
-	margin:10px 8px 32px 0;
-	padding:0;
-	width:100%;
-}
-
-#wikibody .entry .contents
-{
-	padding:12px;
-}
-
-#wikibody .entry .contents h1
-{
-	font-size:18px;
-	margin-top:8px;
-	width:97%;
-}
-
-#wikibody .entry .contents h2,
-#wikibody .entry .contents h5
-{
-	font-size:15px;
-	margin-top:8px;
-}
-
-#wikibody .entry .contents h3
-{
-	background-color:#FFF;
-	font-size:15px;
-	margin-top:8px;
-}
-
-#wikibody .entry .contents h4
-{
-	font-size:18px;
-	margin-top:8px;
-}
-
-#wikibody .entry .contents h6
-{
-	background-color:#ffffe0;
-	font-size:15px;
-	margin-top:8px;
-}
-
-#wikibody .entry h1 .date,
-#wikibody .entry h4 .date
-{
-	color:#fff;
-	font-size:12px;
-	font-weight:400;
-}
-
-#wikibody .entry h1 a,
-#wikibody .entry h4 a
-{
-	color:#803333;
-}
-
-#wikibody .entry h3
-{
-	background-color:#e0e0e0;
-	color:#000;
-	font-size:16px;
-	font-weight:700;
-	margin:0;
-	padding:4px;
-}
-
-#wikibody .entry h3 .date
-{
-	color:gray;
-	font-size:12px;
-	font-weight:400;
-}
-
-#wikibody .entry h3 a:active,#wikibody .entry h3 a:link
-{
-	color:#000;
-	text-decoration:none;
-}
-
-#wikibody .entry h3 a:hover
-{
-	background-color:#ff9;
-	color:#ffd082;
 }
 
 #wikibody .error
@@ -325,38 +142,6 @@
 	color:#006;
 }
 
-#wikibody blockquote
-{
-	background-color:#E6E6FA;
-	border-left:solid 4px #483D8B;
-	margin:12px 24px;
-	padding:0 8px;
-}
-
-#wikibody div.article
-{
-	background-color:#FCFCF0;
-	margin:0;
-	padding:8px;
-}
-
-#wikibody div.body
-{
-	margin:0;
-	padding:0;
-	text-align:left;
-	width:100%;
-}
-
-#wikibody div.column
-{
-	background:#FFF no-repeat 8px 4px;
-	border:solid 1px #B0C4DE;
-	color:#666;
-	margin:12px 24px 24px;
-	padding:8px;
-}
-
 #wikibody div.date
 {
 	color:#666;
@@ -371,24 +156,12 @@
 	width:100%;
 }
 
-#wikibody dl dd
-{
-	padding:1px 0 4px 30px;
-}
-
-#wikibody dl dt
-{
-	font-weight:700;
-	margin-top:8px;
-}
-
 #wikibody h1
 {
-	background-color:#f0faff;
-	border-top:solid 6px #AAAAF0;
-	font-size:22px;
-	font-weight:700;
-	margin:20px 0 15px;
+	background-color: #f0f0ff;
+	border-bottom: solid 1px silver;
+	font-size: 1.3em;
+	margin: 20px 0 15px;
 	padding:10px 10px 10px 8px;
 }
 
@@ -773,11 +546,9 @@
 
 #wikimenu .contents ul li
 {
-	border-left: 4px solid #ccd;
-	border-bottom: 1px solid #ccd;
 	display: block;
 	margin: 0;
-	padding: 12px 2px 12px 6px;
+	padding: 4px;
 }
 
 #wikimenu .contents ul li a
@@ -1482,5 +1253,9 @@ ul.topnavi a
   color: gray;
 }
 
-
+.allpage_footer
+{
+  border-top: 1px dotted silver;
+  padding: 10px;
+}
 
