--- a/skin/def/kona3.css
+++ b/skin/def/kona3.css
@@ -1,3 +1,96 @@
+/** kona3_layout */
+#kona3_layout_header {
+	background-color: #f0f0f0;
+	border-bottom: 1px solid #e0e0e0;
+	text-align: left;
+}
+#kona3_layout_title {
+	margin: 0 auto;
+	max-width: 768px;
+}
+#kona3_layout_show {
+	font-size:1em;
+	line-height:1.4em;
+	margin:0 auto;
+	max-width:768px;
+}
+
+/** kona3_header */
+.kona3_header_pad {
+	padding: 8px;
+}
+
+#kona3_header_title {
+	font-size: 1.5em;
+}
+#kona3_header_title a {
+	text-decoration: none;
+	color: #0366d6;
+}
+#kona3_header_title .pagename {
+	font-size:0.8em;
+	font-weight:400;
+}
+
+/** kona3_main */
+#kona3_main
+{
+	margin:8px;
+	padding:0;
+}
+#kona3_main h1
+{
+	background-color: #f0f0ff;
+	border-bottom: solid 1px silver;
+	font-size: 1.3em;
+	font-weight: bold;
+	margin: 20px 0 15px;
+	padding:10px 10px 10px 8px;
+}
+
+#kona3_main h2
+{
+	border-top:solid 1px silver;
+	border-bottom:solid 1px silver;
+	color:#004;
+	font-size: 1.2em;
+	margin:1.5em 0;
+	padding: 0.5em;
+}
+
+#kona3_main h3
+{
+	border-bottom: dotted 1px silver;
+	font-size:1.1em;
+	margin:1.5em 0 1em;
+	padding:8px 0 2px 4px;
+}
+
+#kona3_main h4,#kona3_main h5
+{
+	border-bottom:solid 1px #F0F0F0;
+	font-size:16px;
+	font-weight:700;
+	margin:30px 0 15px;
+	padding:8px 0;
+}
+
+#kona3_main h6
+{
+	border-bottom:solid 1px #F0F0F0;
+	font-size:16px;
+	font-weight:700;
+	margin:30px 0 15px;
+	padding:8px 0 6px;
+}
+
+#kona3_main .buttons .hint,
+#kona3_main .note,
+#wikieditorbody .hint,.plugin_comment form label {
+	font-size:0.7em;
+}
+
+
 #conflict_copy_edit_btn
 {
 	width:300px;
@@ -19,40 +112,20 @@
 	width:50%;
 }
 
-#pagename
-{
-	font-size:0.8em;
-	font-weight:400;
-}
 
-#wikibody
-{
-	font-size:1em;
-	line-height:1.4em;
-	margin:0 auto;
-	max-width:768px;
-}
-
-#wikibody .buttons .hint,
-#wikibody .note,
-#wikieditorbody .hint,.plugin_comment form label
-{
-	font-size:0.7em;
-}
-
-#wikibody .conflictadd
+#kona3_main .conflictadd
 {
 	background-color:#F88;
 	color:#FFF;
 }
 
-#wikibody .conflictsub
+#kona3_main .conflictsub
 {
 	background-color:#88F;
 	color:#FFF;
 }
 
-#wikibody .contents .blognavi
+#kona3_main .contents .blognavi
 {
 	background-color:#FFFFC9;
 	color:#fc7819;
@@ -62,19 +135,19 @@
 }
 
 
-#wikibody .date
+#kona3_main .date
 {
 	color:#333;
 	font-size:0.7em;
 }
 
-#wikibody .error
+#kona3_main .error
 {
 	color:red;
 	margin:8px;
 }
 
-#wikibody .imagecaption
+#kona3_main .imagecaption
 {
 	background-color:#FFF;
 	font-size:11px;
@@ -82,7 +155,7 @@
 	width:100%;
 }
 
-#wikibody .message
+#kona3_main .message
 {
 	background-color:#fff0f0;
 	float:left;
@@ -92,26 +165,20 @@
 	width:100%;
 }
 
-#wikibody .new
+#kona3_main .new
 {
 	color:red;
 	font-size:0.7em;
 }
 
-#wikibody .none
+#kona3_main .none
 {
 	background-color:#FFC;
 	color:#999;
 	padding:2px;
 }
 
-#wikibody .page_body .contents
-{
-	margin:8px;
-	padding:0;
-}
-
-#wikibody .resmark
+#kona3_main .resmark
 {
 	background-color:#f0f0ff;
 	color:#00f;
@@ -119,36 +186,36 @@
 	padding:4px;
 }
 
-#wikibody .todo
+#kona3_main .todo
 {
 	background-color:#F0FFF0;
 	color:#494;
 	padding:2px;
 }
 
-#wikibody a:hover
+#kona3_main a:hover
 {
 	background-color:#ffa;
 	color:#00f;
 }
 
-#wikibody a:link,#wikibody a:active,pre.code span.tag,pre.code span.keyword
+#kona3_main a:link,#kona3_main a:active,pre.code span.tag,pre.code span.keyword
 {
 	color:#00f;
 }
 
-#wikibody a:visited
+#kona3_main a:visited
 {
 	color:#006;
 }
 
-#wikibody div.date
+#kona3_main div.date
 {
 	color:#666;
 	font-size:12px;
 }
 
-#wikibody div.edit
+#kona3_main div.edit
 {
 	font-size:10px;
 	padding:4px;
@@ -156,76 +223,30 @@
 	width:100%;
 }
 
-#wikibody h1
-{
-	background-color: #f0f0ff;
-	border-bottom: solid 1px silver;
-	font-size: 1.3em;
-	margin: 20px 0 15px;
-	padding:10px 10px 10px 8px;
-}
 
-#wikibody h2
-{
-	border-top:solid 3px #e0e0e0;
-	color:#004;
-	font-size:20px;
-	font-weight:700;
-	margin:20px 0;
-	padding:10px 10px 10px 4px;
-}
-
-#wikibody h3
-{
-	border-bottom:solid 1px #ccf;
-	border-left:solid 1px #ccf;
-	font-size:16px;
-	font-weight:700;
-	margin:40px 0 15px;
-	padding:8px 0 2px 4px;
-}
-
-#wikibody h4,#wikibody h5
-{
-	border-bottom:solid 1px #F0F0F0;
-	font-size:16px;
-	font-weight:700;
-	margin:30px 0 15px;
-	padding:8px 0;
-}
-
-#wikibody h6
-{
-	border-bottom:solid 1px #F0F0F0;
-	font-size:16px;
-	font-weight:700;
-	margin:30px 0 15px;
-	padding:8px 0 6px;
-}
-
-#wikibody img
+#kona3_main img
 {
 	border:solid 1px gray;
 }
 
-#wikibody ol
+#kona3_main ol
 {
 	margin:6px 0;
 	padding-left:12px;
 }
 
-#wikibody ol li
+#kona3_main ol li
 {
 	margin-left:16px;
 }
 
-#wikibody p
+#kona3_main p
 {
 	margin-bottom:20px;
 	margin-top:12px;
 }
 
-#wikibody p.figureTitle
+#kona3_main p.figureTitle
 {
 	font-size:12px;
 	font-weight:700;
@@ -233,7 +254,7 @@
 	padding:0;
 }
 
-#wikibody table
+#kona3_main table
 {
 	border-collapse:collapse;
 	border-left:1px solid #A0A0A0;
@@ -241,7 +262,7 @@
 	margin:4px 0;
 }
 
-#wikibody table table td
+#kona3_main table table td
 {
 	background-color:#E6E6FA;
 	border:0;
@@ -250,7 +271,7 @@
 	text-align:left;
 }
 
-#wikibody table table th
+#kona3_main table table th
 {
 	background-color:#E6E6FA;
 	border:0;
@@ -260,7 +281,7 @@
 	text-align:left;
 }
 
-#wikibody table td
+#kona3_main table td
 {
 	background-color:#eef;
 	border-bottom:1px solid #A0A0A0;
@@ -270,13 +291,13 @@
 	padding:6px 8px;
 }
 
-#wikibody table td p,#wikibody table th p,#wikifooter p
+#kona3_main table td p,#kona3_main table th p,#wikifooter p
 {
 	margin:0;
 	padding:0;
 }
 
-#wikibody table th
+#kona3_main table th
 {
 	background-color:#e0e0ff;
 	border-bottom:1px solid #A0A0A0;
@@ -288,280 +309,58 @@
 	text-align:left;
 }
 
-#wikibody ul
+#kona3_main ul
 {
 	font-size:1em;
 	margin:6px 0;
 	padding-left:12px;
 }
 
-#wikibody ul li
+#kona3_main ul li
 {
 	margin-left:16px;
 	margin-right:16px;
 }
 
-#wikicommand
-{
-	font-size:0.8em;
-	margin:auto;
-	width:1000px;
-}
-
-#wikicommand h6
-{
-	border-bottom:solid 1px #e0e0e0;
-	border-top:solid 3px #a0a0a0;
-	font-size:1em;
-	margin-bottom:8px;
-	margin-top:24px;
-	padding:8px;
-}
-
-#wikieditor
-{
-	font-size:1em;
-	line-height:1.3em;
-	margin:0 auto;
-	text-align:left;
-	width:980px;
-}
-
-#wikieditor .editorpad
-{
-	padding:8px;
-	text-align:left;
-}
-
-#wikieditorbody .date
-{
-	font-size:10px;
-}
-
-#wikieditorbody .desc
-{
-	color:#339;
-	font-size:12px;
-	margin:0;
-	padding:4px;
-}
-
-#wikieditorbody .difftext
-{
-	background-color:#e0e0e0;
-	font-family:"Menlo", "Courier", "monospace", "ＭＳ ゴシック";
-	font-size:14px;
-	line-height:16px;
-	margin:0 0 12px;
-	padding:8px;
-}
-
-#wikieditorbody .error
-{
-	color:red;
-	font-size:14px;
-	padding:8px;
-}
-
-#wikieditorbody .maintext
-{
-	background-color:#f6f6ff;
-	font-family:"Menlo", "Courier", "monospace", "ＭＳ ゴシック";
-	font-size:14px;
-	line-height:17px;
-	margin:0 0 12px;
-	padding:8px;
-}
-
-#wikieditortitle
-{
-	background-color:#f0f0ff;
-	float:left;
-	font-size:12px;
-	height:100%;
-	line-height:20px;
-	width:19%;
-}
-
-#wikieditortitle ul
-{
-	font-size:10px;
-	line-height:12px;
-	list-style-type:none;
-}
-
-#wikifooter
-{
-	border-top:solid 1px #E0e0FF;
-	margin:0 auto;
-	max-width:768px;
-	padding:12px;
-	text-align:center;
-}
-
-#wikifooter .footer_menu
-{
-	font-size:0.6em;
-	padding:12px;
-	text-align:right;
-}
-
-#wikifooter .footer_menu > span
-{
-	background-color:#f0f0f0;
-	padding:12px;
-}
-
-#wikifooter .info > a
-{
-	color:gray;
-	font-size:0.6em;
-	text-decoration:none;
-}
-
-#wikifooter .menu
-{
-	font-size:1em;
-	margin-bottom:4px;
-	padding:3px;
-	text-align:right;
-}
-
-#wikifooter .pageinfo
-{
-	text-align:right;
-}
-
-#wikifooter > div.info
-{
-	margin-top:12px;
-	padding:24px;
-}
-
-#wikifooter UL
-{
-	list-style:none;
-	text-align:right;
-}
-
-#wikiframe
-{
-	border-top:solid 1px #E0e0FF;
-	font-size:1em;
-	margin:0 auto 6px;
-	padding:4px;
-	text-align:left;
-	width:768px;
-}
-
-#wikiheader
-{
-	border-bottom:1px solid silver;
-	margin:0 auto;
-	max-width:768px;
-	padding:0;
-	text-align:left;
-}
-
-#wikiheader .logo
-{
-	float:left;
-	font-size:32px;
-	padding:8px 4px 8px 16px;
-	text-align:left;
-}
-
-#wikiheader .logo a,#wikibody .entry h3 a:visited
-{
-	color:#000;
-	text-decoration:none;
-}
-
-#wikiheader .memo
-{
-	color:#a0a0a0;
-	font-size:10px;
-}
-
-#wikiheader .memo a
-{
-	color:#a0a0ff;
-	font-size:10px;
-}
-
-#wikiheader .menu
-{
-	color:gray;
-	float:right;
-	font-size:12px;
-	padding-right:8px;
-	padding-top:8px;
-	text-align:right;
-}
-
-#wikiheader .menu a
-{
-	color:gray;
-	text-decoration:none;
-}
-
-#wikiheader .pagename
-{
-	font-size:16px;
-}
-
-#wikiheader div.description
-{
-	font-size:10px;
-	padding-right:8px;
-}
-
-#wikiheader h1
-{
-	font-size:32px;
-	margin:0 0 4px;
-	padding:0;
-}
-
-#wikimenu
+/** kona3_menubar */
+#kona3_menubar
 {
 	height:100%;
-	padding:0;
-	top:0;
-}
-
-#wikimenu .contents
-{
-	height:100%;
-	margin:0;
-	padding:0;
 	border-left: 1px dotted #eee;
 }
 
-#wikimenu .contents ul
+#kona3_menubar ul
 {
 	list-style:none;
-	margin-left:0;
+	margin:4px 8px 4px 16px;
+	padding:0;
 }
 
-#wikimenu .contents ul li
+#kona3_menubar ul li
 {
 	display: block;
-	margin: 0;
-	padding: 4px;
+	padding: 0 0 0 0;
+	margin: 0 0 0 0;
 }
 
-#wikimenu .contents ul li a
+#kona3_menubar ul li a
 {
 	display:block;
 }
 
-#wikimenu h1,#wikimenu h2,#wikimenu h3
+#kona3_menubar h1,
+#kona3_menubar h2,
+#kona3_menubar h3
 {
-	background-color:#f0f0ff;
 	font-size:1em;
 	margin: 18px 0px 0px 0px;
 	padding: 8px;
+	border-bottom: dotted 1px silver;
+}
+
+#kona3_menubar .date {
+	font-size: 0.8em;
+	color: gray;
 }
 
 #wikimessage
@@ -751,19 +550,6 @@
 	list-style-type:square;
 	margin:4px 0 4px 8px;
 	padding:4px 4px 4px 12px;
-}
-
-#wikititle
-{
-	font-size:1.5em;
-	font-weight:700;
-	padding:12px;
-}
-
-*
-{
-	margin:0;
-	padding:0;
 }
 
 .anchor_super
@@ -1229,14 +1015,6 @@ ul.topnavi a
 	text-decoration:none;
 }
 
-#wikimenu ul.recent > li
-{
-	font-size: 0.9em;
-	border:none;
-	padding: 4px;
-	margin: 0px;
-}
-
 .counter
 {
   font-size: 0.9em;
@@ -1257,5 +1035,147 @@ ul.topnavi a
 {
   border-top: 1px dotted silver;
   padding: 10px;
+  margin-top: 1.5em;
+}
+
+#wikicommand
+{
+	font-size:0.8em;
+	margin:auto;
+	width:1000px;
+}
+
+#wikicommand h6
+{
+	border-bottom:solid 1px #e0e0e0;
+	border-top:solid 3px #a0a0a0;
+	font-size:1em;
+	margin-bottom:8px;
+	margin-top:24px;
+	padding:8px;
+}
+
+#wikieditor
+{
+	font-size:1em;
+	line-height:1.3em;
+	text-align:left;
+}
+
+#wikieditor .editorpad
+{
+	padding:8px;
+	text-align:left;
+}
+
+#wikieditorbody .date
+{
+	font-size:10px;
+}
+
+#wikieditorbody .desc
+{
+	color:#339;
+	font-size:12px;
+	margin:0;
+	padding:4px;
+}
+
+#wikieditorbody .difftext
+{
+	background-color:#e0e0e0;
+	font-family:"Menlo", "Courier", "monospace", "ＭＳ ゴシック";
+	font-size:14px;
+	line-height:16px;
+	margin:0 0 12px;
+	padding:8px;
+}
+
+#wikieditorbody .error
+{
+	color:red;
+	font-size:14px;
+	padding:8px;
+}
+
+#wikieditorbody .maintext
+{
+	background-color:#f6f6ff;
+	font-family:"Menlo", "Courier", "monospace", "ＭＳ ゴシック";
+	font-size:14px;
+	line-height:17px;
+	margin:0 0 12px;
+	padding:8px;
+}
+
+#wikieditortitle
+{
+	background-color:#f0f0ff;
+	float:left;
+	font-size:12px;
+	height:100%;
+	line-height:20px;
+	width:19%;
+}
+
+#wikieditortitle ul
+{
+	font-size:10px;
+	line-height:12px;
+	list-style-type:none;
+}
+
+#wikifooter
+{
+	border-top:solid 1px #E0e0FF;
+	margin:0 auto;
+	max-width:768px;
+	padding:12px;
+	text-align:center;
+}
+
+#wikifooter .footer_menu
+{
+	font-size:0.6em;
+	padding:12px;
+	text-align:right;
+}
+
+#wikifooter .footer_menu > span
+{
+	background-color:#f0f0f0;
+	padding:12px;
+}
+
+#wikifooter .info > a
+{
+	color:gray;
+	font-size:0.6em;
+	text-decoration:none;
+}
+
+#wikifooter .menu
+{
+	font-size:1em;
+	margin-bottom:4px;
+	padding:3px;
+	text-align:right;
+}
+
+#wikifooter .pageinfo
+{
+	text-align:right;
+}
+
+#wikifooter > div.info
+{
+	margin-top:12px;
+	padding:24px;
+}
+
+#wikifooter UL
+{
+	list-style:none;
+	text-align:right;
 }
 
