ページの文字数を表示するように修正

--- a/kona3engine/template/show.html
+++ b/kona3engine/template/show.html
@@ -5,6 +5,9 @@
   
     <div class="pure-u-1 pure-u-md-19-24 page_body">
       <div id="kona3_main">
+        {{ if $show_data_dir != '' }}
+          <div class="mojisu">{{ $cnt_txt }}字</div>
+        {{ endif }}
         {{$page_body | safe}}
       </div><!-- #kona3_main -->
     </div><!-- end of .page_body -->
