--- a/kona3engine/template/user.html
+++ b/kona3engine/template/user.html
@@ -6,6 +6,8 @@
 <div class="box_border">
   <h3>{{'Admin Menu' | lang}}</h3>
   <div style="padding:8px;">
+    <a class="pure-button" href="{{$editConf_link}}">
+    {{'Edit Config'|lang}}</a>
     <a class="pure-button" href="{{$userList_link}}">
     {{'Users List'|lang}}</a>
     <a class="pure-button" href="{{$emailLogs_link}}">
