In edit page, admin page, fixed CRSF problem

--- a/kona3admin/template/admin_conf.html
+++ b/kona3admin/template/admin_conf.html
@@ -99,6 +99,7 @@
   <input type='text' name='para_enabled_br' value='{{$para_enabled_br | boolstr}}'><br>
   
   <br>
+  <input type='hidden' name='edit_token' value='{{$edit_token}}'>
   <input type='submit' value='Save'>
 </div>
 </form>
