編集本文のテキストサイズ制限を追加

--- a/kona3admin/template/admin_conf.html
+++ b/kona3admin/template/admin_conf.html
@@ -104,6 +104,9 @@
   chmod_mkdir(default:0777):<br>
   <input type='text' name='chmod_mkdir' value='{{$chmod_mkdir}}'><br>
   
+  max_edit_size(0:no limit, unit=MB):<br>
+  <input type='text' name='chmod_mkdir' value='{{$max_edit_size}}'><br>
+  
   <br>
   <input type='hidden' name='edit_token' value='{{$edit_token}}'>
   <input type='submit' value='Save'>
