--- a/kona3admin/template/admin_conf.html
+++ b/kona3admin/template/admin_conf.html
@@ -105,7 +105,7 @@
   <input type='text' name='chmod_mkdir' value='{{$chmod_mkdir}}'><br>
   
   max_edit_size(0:no limit, unit=MB):<br>
-  <input type='text' name='chmod_mkdir' value='{{$max_edit_size}}'><br>
+  <input type='text' name='max_edit_size' value='{{$max_edit_size}}'><br>
   
   <br>
   <input type='hidden' name='edit_token' value='{{$edit_token}}'>
