マニュアルの本文検索をオプションにする #49

--- a/kona3admin/template/admin_conf.html
+++ b/kona3admin/template/admin_conf.html
@@ -106,6 +106,11 @@
   
   max_edit_size(0:no limit, unit=MB):<br>
   <input type='text' name='max_edit_size' value='{{$max_edit_size}}'><br>
+
+  max_search:<br>
+  <input type='text' name='max_search' value='{{$max_search}}'><br>
+  max_search_level:<br>
+  <input type='text' name='max_search_level' value='{{$max_search_level}}'><br>
   
   <br>
   <input type='hidden' name='edit_token' value='{{$edit_token}}'>
